<resources>
    <string name="app_name">ReservacionDeViaje</string>
    <string name="nombre">Nombre(s)</string>
    <string name="apellido">Apellido(s)</string>
    <string name="correo">Correo</string>
    <string name="origen">Origen</string>
    <string name="destino">Destino</string>
    <string name="fecha_de_salida">Fecha de Salida</string>
    <string name="fecha_de_regreso">Fecha de Regreso</string>
    <string name="numero_de_viajero">Num. de viajero (opcional)</string>
    <string name="reservar">Reservar</string>
    <string name="confirmacion">Confirmacion</string>
    <string name="correo_no_valido">Correo no valido</string>
    <string name="falta_nombre">Falta nombre(s)</string>
    <string name="falta_apellido">Falta apellido(s)</string>
    <string name="falta_fecha_salida">Falta fecha salida</string>
    <string name="falta_fecha_regreso">Falta fecha regreso</string>
    <string name="viaje_redondo">Viaje Redondo</string>
    <string name="precio_con_descuento">%.2f$ (%d%% de descuento)</string>
    <string name="origen_diferente_destino">Origen y Destino deben ser diferentes</string>
    <string name="fecha_salida_pasada">No puedes seleccionar una fecha pasada para la salida</string>
    <string name="seleccionar_fecha_salida_primero">Selecciona primero la fecha de salida</string>
    <string name="fecha_regreso_invalida">Fecha de regreso debe ser posterior a la fecha de salida</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="fecha_y_hora_ida">Fecha y hora(Ida)</string>
    <string name="asiento_ida">Asiento ida</string>
    <string name="fecha_y_hora_regreso">Fecha y hora(Regreso)</string>
    <string name="asiento_regreso">Asiento Regreso</string>
    <string name="precio">Precio</string>
</resources>