<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_bg"
    android:padding="16dp"
    tools:context=".ConfirmationActivity">

    <TextView
        android:id="@+id/tvRevisar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/plus_jakarta_sans_extralight"
        android:gravity="center"
        android:text="@string/confirmacion"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivPersona"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRevisar"
        app:srcCompat="@drawable/persona" />

    <TextView
        android:id="@+id/tvNombreCompleto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/plus_jakarta_sans_extralight"
        android:text="@string/nombre_completo"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivPersona"
        app:layout_constraintTop_toTopOf="@+id/ivPersona" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/plus_jakarta_sans_extralight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvNombreCompleto"
        app:layout_constraintTop_toBottomOf="@+id/tvNombreCompleto"
        tools:text="Erik Garcia" />

    <ImageView
        android:id="@+id/ivOrigen"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNombre"
        app:srcCompat="@drawable/origen" />

    <TextView
        android:id="@+id/tvOrigen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/plus_jakarta_sans_extralight"
        android:text="@string/origen"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivOrigen"
        app:layout_constraintTop_toTopOf="@+id/ivOrigen" />

    <TextView
        android:id="@+id/tvOrigen2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/plus_jakarta_sans_extralight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvOrigen"
        app:layout_constraintTop_toBottomOf="@+id/tvOrigen"
        tools:text="Ciudad de origen" />

    <ImageView
        android:id="@+id/ivFechaIda"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOrigen2"
        app:srcCompat="@drawable/calendario" />

    <TextView
        android:id="@+id/tvFechaIda"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/plus_jakarta_sans_extralight"
        android:text="@string/fecha_y_hora"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivFechaIda"
        app:layout_constraintTop_toTopOf="@+id/ivFechaIda" />

    <TextView
        android:id="@+id/tvFechaIda2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/plus_jakarta_sans_extralight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvFechaIda"
        app:layout_constraintTop_toBottomOf="@+id/tvFechaIda"
        tools:text="01/01/2023 12:00" />

    <ImageView
        android:id="@+id/ivAsientoIda"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFechaIda2"
        app:srcCompat="@drawable/asiento" />

    <TextView
        android:id="@+id/tvAsientoIda"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/plus_jakarta_sans_extralight"
        android:text="@string/asiento"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivAsientoIda"
        app:layout_constraintTop_toTopOf="@+id/ivAsientoIda" />

    <TextView
        android:id="@+id/tvAsientoIda2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/plus_jakarta_sans_extralight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvAsientoIda"
        app:layout_constraintTop_toBottomOf="@+id/tvAsientoIda"
        tools:text="A1" />

    <ImageView
        android:id="@+id/ivDestino"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAsientoIda2"
        app:srcCompat="@drawable/destino" />

    <TextView
        android:id="@+id/tvDestino"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/plus_jakarta_sans_extralight"
        android:text="@string/destino"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivDestino"
        app:layout_constraintTop_toTopOf="@+id/ivDestino" />

    <TextView
        android:id="@+id/tvDestino2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/plus_jakarta_sans_extralight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvDestino"
        app:layout_constraintTop_toBottomOf="@+id/tvDestino"
        tools:text="Ciudad de destino" />

    <ImageView
        android:id="@+id/ivFechaRegreso"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDestino2"
        app:srcCompat="@drawable/calendario" />

    <TextView
        android:id="@+id/tvFechaRegreso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/plus_jakarta_sans_extralight"
        android:text="@string/fecha_y_hora"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivFechaRegreso"
        app:layout_constraintTop_toTopOf="@+id/ivFechaRegreso" />

    <TextView
        android:id="@+id/tvFechaRegreso2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/plus_jakarta_sans_extralight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvFechaRegreso"
        app:layout_constraintTop_toBottomOf="@+id/tvFechaRegreso"
        tools:text="15/01/2023 18:00" />

    <ImageView
        android:id="@+id/ivAsientoRegreso"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFechaRegreso2"
        app:srcCompat="@drawable/asiento" />

    <TextView
        android:id="@+id/tvAsientoRegreso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/plus_jakarta_sans_extralight"
        android:text="@string/asiento"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivAsientoRegreso"
        app:layout_constraintTop_toTopOf="@+id/ivAsientoRegreso" />

    <TextView
        android:id="@+id/tvAsientoRegreso2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/plus_jakarta_sans_extralight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvAsientoRegreso"
        app:layout_constraintTop_toBottomOf="@+id/tvAsientoRegreso"
        tools:text="B2" />

    <ImageView
        android:id="@+id/ivPrecio"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAsientoRegreso2"
        app:srcCompat="@drawable/precio" />

    <TextView
        android:id="@+id/tvPrecio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/plus_jakarta_sans_extralight"
        android:text="@string/precio"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivPrecio"
        app:layout_constraintTop_toTopOf="@+id/ivPrecio" />

    <TextView
        android:id="@+id/tvPrecio2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/plus_jakarta_sans_extralight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvPrecio"
        app:layout_constraintTop_toBottomOf="@+id/tvPrecio"
        tools:text="$500.00" />

    <TextView
        android:id="@+id/tvPrecio3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/plus_jakarta_sans_extralight"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvPrecio2"
        app:layout_constraintTop_toBottomOf="@+id/tvPrecio2"
        tools:text="Precio con descuento"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>